🔧 FIX: Resolve CI/CD formatting issues - Exclude gui_env from formatting checks and fix import sorting - Resolves black/isort failures in pipeline

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -35,8 +35,8 @@ jobs:
         
     - name: Run code formatting check
       run: |
-        black --check --diff .
-        isort --check-only --diff .
+        black --check --diff . --exclude gui_env
+        isort --check-only --diff . --skip gui_env
         
     - name: Run type checking
       run: |
