🔧 FIX: Remove invalid mypy flag --ignore-errors - Flag does not exist in mypy version

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         
     - name: Run type checking
       run: |
-        mypy plugins/ integrations/ agents/ utils/ --ignore-missing-imports --no-strict-optional --ignore-errors
+        mypy plugins/ integrations/ agents/ utils/ --ignore-missing-imports --no-strict-optional
         
     - name: Run security scan
       run: |
