🔧 FIX: Docker test uses local image tag - Fixed Docker image testing to use local autodevcore:latest instead of undefined env vars

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -163,7 +163,7 @@ jobs:
         
     - name: Test Docker image
       run: |
-        docker run --rm ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }} python -c "
+        docker run --rm autodevcore:latest python -c "
         print('AutoDevCore Docker test successful!')
         from integrations.gpt_oss import gpt_oss_client
         print('GPT-OSS integration:', gpt_oss_client.get_cache_stats())
