--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -157,7 +157,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: false
-        tags: ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
+        tags: autodevcore:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
         
