--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -152,14 +152,16 @@ jobs:
       uses: docker/setup-buildx-action@v3
       
     - name: Build Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        push: false
-        tags: autodevcore:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      run: |
+        docker build -t autodevcore:latest .
+        echo "✅ Docker image built successfully"
+        
+    - name: Verify Docker image
+      run: |
+        echo "🔍 Checking available Docker images..."
+        docker images
+        echo "🔍 Checking if autodevcore:latest exists..."
+        docker image inspect autodevcore:latest || echo "❌ Image not found"
         
     - name: Test Docker image
       run: |
